--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -21,3 +21,12 @@ collections:
             - { label: "Name", name: "name", widget: "string"}
             - { label: "Description", name: "description", widget: "text"}
             - { label: "Link", name: "link", widget: "text"}
+    - label: "Posts"
+      name: "posts"
+      folder: "content/posts"
+      create: true
+      identifier_field: name
+      fields:
+        - {label: "Name", name: "name", widget: "string"}
+        - {label: "Publish Date", name: "date", widget: "datetime"}
+        - {label: "Body", name: "body", widget: "markdown"}
