--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@babel/plugin-transform-runtime": "^7.13.10",
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.13.13",
-    "frontmatter-markdown-loader": "^3.6.2"
+    "frontmatter-markdown-loader": "^3.6.2",
+    "markdown-it": "^12.0.6",
+    "markdown-it-prism": "^2.1.6"
   }
 }
