--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "moment": "^2.29.1",
     "next": "^10.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
