--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -7,7 +7,7 @@ collections:
   - name: "pages"
     label: "Pages"
     files:
-    - label: "Home"
+    - label: "Blogs"
       name: "home"
       file: "content/home.md"
       fields:
@@ -21,6 +21,20 @@ collections:
             - { label: "Name", name: "name", widget: "string"}
             - { label: "Description", name: "description", widget: "text"}
             - { label: "Link", name: "link", widget: "text"}
+    - label: "Portfolio"
+      name: "portfolio"
+      file: "content/portfolio.md"
+      fields:
+        - { label: "Title", name: "title", widget: "string"}
+        - { label: "Body", name: "body", widget: "markdown"}
+        - label: 'Projects'
+          name: "projects"
+          widget: list
+          fields:
+            - { label: "Name", name: "name", widget: "string"}
+            - { label: "Date", name: "date", widget: "datetime" }
+            - { label: "Link", name: "link", widget: "text"}
+            - { label: "Description", name: "description", widget: "text"}
   - label: "Posts"
     name: "posts"
     folder: "content/posts"
