--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -13,6 +13,7 @@ collections:
       fields:
         - { label: "Title", name: "title", widget: "string"}
         - { label: "Publish Date", name: "date", widget: "datetime" }
+        - { label: "Hero Image", name: "hero", widget: "image" }
         - { label: "Body", name: "body", widget: "markdown"}
         - label: 'Posts'
           name: "posts"
@@ -26,6 +27,7 @@ collections:
       file: "content/portfolio.md"
       fields:
         - { label: "Title", name: "title", widget: "string"}
+        - { label: "Hero Image", name: "hero", widget: "image" }
         - { label: "Body", name: "body", widget: "markdown"}
         - label: 'Projects'
           name: "projects"
