--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -20,6 +20,7 @@ collections:
           widget: list
           fields:
             - { label: "Name", name: "name", widget: "string"}
+            - { label: "Date", name: "date", widget: "datetime" }
             - { label: "Description", name: "description", widget: "text"}
             - { label: "Link", name: "link", widget: "text"}
     - label: "Portfolio"
