--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "moment": "^2.29.1",
     "next": "^10.1.3",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "sass": "^1.32.12"
+    "sass": "^1.32.12",
+    "striptags": "^3.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.13.14",
