--- a/package.json
+++ b/package.json
@@ -12,21 +12,26 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@headlessui/react": "^1.6.6",
+    "@heroicons/react": "^2.0.8",
     "moment": "^2.29.1",
-    "next": "^10.1.3",
+    "next": "^12.2.5",
     "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "sass": "^1.32.12",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "striptags": "^3.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.13.14",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-transform-runtime": "^7.13.10",
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.13.13",
+    "autoprefixer": "^10.4.8",
     "frontmatter-markdown-loader": "^3.6.2",
     "markdown-it": "^12.0.6",
-    "markdown-it-prism": "^2.1.6"
+    "markdown-it-prism": "^2.1.6",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8"
   }
 }
