--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "Ollie Codes",
+  "short_name": "Ollie The Dev",
   "name": "Home page for Ollie's code adventures",
   "icons": [
     {
